[package]
name = "rsdb"
version = "0.1.0"
authors = ["陶辰 <chen.tao@ifchange.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rsdb-server"
path = "src/server.rs"

[[bin]]
name = "rsdb-client"
path = "src/client.rs"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
once_cell = "1.3.1"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.2"
